fix some bug w dark mode

--- a/src/components/Song/Song.scss
+++ b/src/components/Song/Song.scss
@@ -23,7 +23,7 @@
 				height: 7.2rem;
 				border-radius: 0.4rem;
 
-				&:hover, &.focus {
+				&.focus {
 					background-color: rgba(28, 30, 32, 0.05);
 				}
 
